--- a/BOLG.html
+++ b/BOLG.html
@@ -14,12 +14,12 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <body class="bg-light">
+ <nav class="navbar navbar-expand-lg navbar-light bg-light  m-0 p-1">
     <a class="navbar-brand m-0 p-0" href="#">
-      <img  class="m-1 p-0" src="logo.jpeg" width="50" height="50" alt="">
-      <h6 class="navbar-brand m-0 p-0">UBMS</h6>
-    </a> 
+    <img  class="m-1 p-0" src="logo.jpeg" width="50" height="50" alt="">
+    <p class="navbar-brand m-0 p-0 ">Uttar Bharatiye Mahasangh</p>
+  </a> 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -38,21 +38,21 @@
     </ul>
   </div>
 </nav>
-<div class="jumbotron jumbotron-fluid my-0 py-1">
+<!-- <div class="jumbotron jumbotron-fluid my-0 py-1">
   <div class="container">
-    <h4 class="">Welcome to Uttar Bharatiye Mahasangh</h4>
+    <h4 class="">Uttar Bharatiye Mahasangh</h4>
   </div>
-</div>
+</div> -->
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="1113.png" class="d-block w-100" alt="...">
+      <img src="13.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="1113.png" class="d-block w-100" alt="...">
+      <img src="11.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="1113.png" class="d-block w-100" alt="...">
+      <img src="113.png" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -65,9 +65,9 @@
   </a>
 </div>
 
-<button class="btn btn-success btn-block rounded-0 py-2 my-1"><h3><strong>Latest Event</strong></h3></button>
+<h3 class="text-center"><strong>Latest Event</strong></h3>
 
-<div class="row row-cols-1 row-cols-md-3 mx-0 my-1">
+<div class="row row-cols-1 row-cols-md-3 mx-0 my-1 jumbotron">
   <div class="col mb-4">
     <div class="card rounded-0 ">
       <img src="maincard.png" class="card-img-top" alt="...">
